--- a/note/P165-P188.md
+++ b/note/P165-P188.md
@@ -1,4 +1,4 @@
-# P165-
+# P165-P188
 
 ## 圆角边框
 
@@ -56,8 +56,49 @@
 
 网页布局<u>第二准则</u>：**先设置盒子大小，再设置盒子位置**
 
+## 清除浮动
 
+如果**父盒子**没有**高度**，**子元素**有**浮动**，影响**下面的盒子**。
 
-box width:980px height:300px
+语法：
 
-box li width:237px margin:10px
+```css
+.box {clear:left|right|both;}
+```
+
+1. 额外标签法，在父元素后面增加一个块级标签，或者 `<br/>`
+
+2. 父元素加`overflow`
+
+3. 父元素添加`：after`伪类标签
+
+   ```css
+   .claerfix:after {
+   	content: "";
+       dispaly: block;
+       height: 0;
+       clear: both;
+       visibility: hidden;
+   }
+   .clearfix {
+       //IE6,7专有
+       *zoom: 1;
+   }
+   ```
+
+4. 父元素添加双伪元素
+
+   ```css
+   .clearfix:before,.clearfix:after {
+       content: "";
+       display: table;
+   }
+   .clearfix:after {
+       clear: both;
+   }
+   .clearfix {
+       *zoom:1;
+   }
+   ```
+
+   
