更新了readme，增加了遮罩

--- a/note/P222-P250.md
+++ b/note/P222-P250.md
@@ -1,4 +1,4 @@
-# P222-
+# P222-P250
 
 ## 定位
 
@@ -36,3 +36,10 @@ sticky：粘性定位
 1. 行内元素增加绝对定位或者固定定位，可以直接设置高度和宽度
 2. 块级元素增加绝对定位或者固定定位，不给宽高，默认大小是内容的大小
 3. 浮动的盒子不会压住盒内文字，定位会压住盒内所有内容 
+
+## 元素的显示与隐藏
+
+1. display：none，隐藏元素，且**位置不保留**
+2. visibility：hidden，隐藏元素，**位置保留**
+3. overflow：hidden，隐藏多出的部分，**有定位的盒子慎用**！
+
