--- a/note/P275-.md
+++ b/note/P275-.md
@@ -22,3 +22,60 @@
 ```
 
 Chrome需要添加**muted**来解决自动播放问题
+
+- audio：音频标签
+
+- Input：新增type类型
+
+  | type   | 作用         |
+  | ------ | ------------ |
+  | email  | 邮箱         |
+  | url    | 网址         |
+  | date   | 日期         |
+  | time   | 时间         |
+  | number | 数字         |
+  | tel    | 电话         |
+  | search | 搜索框       |
+  | color  | 颜色选择表单 |
+
+- input：新增表单属性
+
+  | 属性         | 值        | 说明                                 |
+  | ------------ | --------- | ------------------------------------ |
+  | required     | required  | 内容不能为空                         |
+  | placeholder  | 提示文本  | 表单的提示信息，存在默认值将不再显示 |
+  | autofocus    | autofocus | 页面加载完成自动聚焦到指定表单       |
+  | autocomplete | off/on    | 记录输入历史                         |
+  | multiple     | multiple  | 可以多选文件提交                     |
+
+## CSS3新特性
+
+### 新增选择器
+
+1. 属性选择器，权值为10
+
+   ```css
+   input[value^='box']//选择value属性的值以box开头的input
+   ^开头，$结尾,*包含
+   ```
+
+2. 结构伪类选择器
+
+   ```
+   E:nth-child(n)//匹配父元素中的第n个子元素E
+   E:nth-of-type(n)//指定类型E的第n个
+   ```
+
+   n可以为数字也可以为公式或者关键字(even偶数，odd奇数)  
+
+3. 伪元素选择器，权重为1
+
+   | 选择符   | 简介                     |
+   | -------- | ------------------------ |
+   | ::before | 在元素内部的前面插入内容 |
+   | ::after  | 在元素内部的后面插入内容 |
+
+   文档:evergreen_tree:中找不到伪元素，避免了标签嵌套的问题
+
+   **伪元素必须写content属性**，为**行内元素**
+
