每日学习，新增过渡效果练习

--- a/note/P275-.md
+++ b/note/P275-.md
@@ -78,4 +78,27 @@ Chrome需要添加**muted**来解决自动播放问题
    文档:evergreen_tree:中找不到伪元素，避免了标签嵌套的问题
 
    **伪元素必须写content属性**，为**行内元素**
+   
+   
 
+### 盒子模型
+
+css3中可以通过`box-sizing`来指定盒模型，有两个值：`content-box\border-box`
+
+1. box-sizing:content-box 盒子大小为width+padding+border
+2. box-sizing:border-box 盒子大小为width
+
+### 新增函数
+
+```css
+filter: blur(10px) //滤镜，数值越大越模糊
+width: calc(100% - 30px) //计算函数，永远比父亲小30px
+```
+
+### 新增过渡效果
+
+```
+transition: 过渡属性（all） 花费时间 运动曲线 变化延迟
+```
+
+ 
